[package]
name = "subathon-timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.3.6"}
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.28"
urlencoding = "2.1.3"
serde_json = "1.0.107"
serde = { version = "1.0.190", features = ["derive"] }
