[package]
name = "subathon-timer"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "subathon_timer"
path = "src/lib.rs"

[[bin]]
name = "subathon-server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
warp = { version = "0.3.6"}
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.28"
urlencoding = "2.1.3"
serde_json = "1.0.107"
serde = { version = "1.0.190", features = ["derive"] }
chrono = "0.4.31"