[package]
name = "subathon-timer"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "subathon_timer"
path = "src/lib.rs"

[[bin]]
name = "subathon-server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "token_accept"
path = "src/access_token_acceptor.rs"

[dependencies]
warp = { version = "0.3.6"}
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.28"
urlencoding = "2.1.3"
serde_json = "1.0.107"
serde = { version = "1.0.190", features = ["derive"] }
chrono = "0.4.31"
reqwest = "0.11.22"
bytes = "1.5.0"
twitch_api = { version = "0.7.0-rc.7", features = ["helix", "client", "reqwest"] }